# algo-engine

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  test.py
algo-api/: .env.template  README.md  pyproject.toml
algo-api/config/: config.json
algo-api/config/instruments/UPSTOX_API/: NSE_NIFTY.csv
algo-api/config/special_day/: README.md  bse_2025.json  nse_2023.json  nse_2024.json  nse_2025.json
algo-api/config/trading_window/: nse_eq_2024.json  nse_eq_2025.json  nse_fno_2024.json  nse_fno_2025.json  nse_fut_2024.json  nse_fut_2025.json  nse_index_2025.json
algo-api/docs/: SERVICE_REGISTRY_GUIDE.md  developers_tools.md
algo-api/examples/: cached_repository_example.py  trading_window_example.py
algo-api/src/algo/: app.py  config_context.py  logging_setup.py  main.py
algo-api/src/algo/application/: run_backtest_usecase.py  strategy_usecases.py  util.py
algo-api/src/algo/domain/: config.py  market.py  service_registry.py  services.py  strategy.py  strategy_repository.py
algo-api/src/algo/infrastructure/: cached_upstox_historical_data_repository.py  in_memory_tradable_instrument_repository.py  json_backtest_report_repository.py  json_special_day_repository.py  json_strategy_repository.py  jsonstrategy.py  parquet_historical_data_repository.py  service_configuration.py  upstox_historical_data_repository.py
algo-api/strategies/: bearish_nifty.json  bullish_nifty.json  rangebound_banks.json
algo-api/tests/: test_backtest_engine.py  test_backtest_engine_light.py  test_backtest_run.py  test_backtest_run_stop_loss.py  test_backtestreport.py  test_config_context.py  test_dto.py  test_historical_data.py  test_instrument.py  test_json_strategy.py  test_position.py  test_position_dto.py  test_position_stop_loss.py  test_strategy_calculate_stop_loss.py  test_tradable_instrument.py  test_tradableinstrument_stop_loss.py  test_trade.py
algo-api/tests/application/: test_instrument_dto.py  test_run_backtest_usecase.py  test_strategy_details_dto.py  test_strategy_usecase.py  test_strategy_usecases.py
algo-api/tests/domain/: test_strategy.py
algo-api/tests/domain/backtest/: test_backtest_run.py  test_backtest_trade_executor.py  test_enhanced_backtest_engine.py
algo-api/tests/domain/indicators/: test_adx.py  test_atr.py  test_ema.py  test_indicator_price.py  test_rsi.py
algo-api/tests/domain/strategy/: test_special_day_repository.py  test_strategy_evaluator.py
algo-api/tests/domain/trading/: test_nse.py  test_trading_window_service.py
algo-api/tests/infrastructure/: test_cached_upstox_historical_data_repository.py  test_config_integration.py  test_json_strategy_repository.py  test_parquet_historical_data_repository.py  test_service_registry.py  test_upstox_historical_data_repository.py
algo-api/tests/infrastructure/api/: test_backtest_controller.py  test_strategy_controller.py
algo-api/tests/infrastructure/upstox/: __init__.py  (+1 more)
components/historical_data/: README.md  config.json  pyproject.toml
(+614 files in other folders)
