[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-api"
version = "0.1.0"
description = "Algorithmic trading engine."
authors = [
    { name = "Sagar Chopade", email = "chopade.sagar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "build==1.3.0",
    "colorama==0.4.6",
    "llvmlite==0.44.0",
    "mccabe==0.7.0",
    "mypy==1.17.1",
    "mypy_extensions==1.1.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.1",
    "pathspec==0.12.1",
    "patsy==1.0.1",
    "pluggy==1.6.0",
    "pyarrow==21.0.0",
    "pycodestyle==2.14.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "statsmodels==0.14.5",
    "TA-Lib==0.6.5",
    "types-python-dateutil==2.9.0.20250809",
    "typing-inspection==0.4.1",
    "Flask>=2.3.0",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "upstox-python-sdk==2.17.0",
    "urllib3==2.5.0",
    "uuid==1.30",
    "websocket-client==1.8.0",
    "waitress==3.0.0",
    "flask-cors==6.0.1",
    "babel==2.17.0"
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.3",
    "flake8==7.3.0",
    "iniconfig==2.1.0",
    "pyflakes==3.4.0",
    "Pygments==2.19.2",
    "pyproject_hooks==1.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
