[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "historical-data"
version = "0.1.0"
description = "Historical Data for Algorithmic Trading."
authors = [
    { name = "Sagar Chopade", email = "chopade.sagar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3==1.40.10",
    "botocore==1.40.10",
    "certifi==2025.8.3",
    "colorama==0.4.6",
    "halo==0.0.31",
    "jmespath==1.0.1",
    "log-symbols==0.0.14",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "parquet_tools==0.2.16",
    "protobuf==6.31.1",
    "pyarrow==21.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "s3transfer==0.13.1",
    "six==1.17.0",
    "spinners==0.0.24",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "thrift==0.16.0",
    "tzdata==2025.2",
    "upstox-python-sdk==2.17.0",
    "urllib3==2.5.0",
    "uuid==1.30",
    "websocket-client==1.8.0"
]

[project.optional-dependencies]
dev = [
    "coverage==7.10.3",
    "flake8==7.3.0",
    "iniconfig==2.1.0",
    "pyflakes==3.4.0",
    "Pygments==2.19.2",
    "pyproject_hooks==1.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
